2004-12-03  Jeroen Frijters  <jeroen@frijters>

	* gnu/testlet/java/lang/Class/ClassTest.java:
	A couple more Class.forName tests.
	* gnu/testlet/java/lang/ref/PhantomReference/phantom.java:
	Made a little more robust.

2004-12-01  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/URLConnection/getHeaderFields.java:
	New testcases.

2004-11-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getNextPreviousNode.java:
	New testcases.

2004-11-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getPath.java:
	New testcases.

2004-11-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/pathFromAncestorEnumeration.java:
	New testcases.

2004-11-30  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/add.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/breadthFirstEnumeration.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/children.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/constructors.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/DefaultMutableTreeNodeTest.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getAllowsChildren.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getChildAfter.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getChildAt.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getChildBefore.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getChildCount.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/isNodeRelated.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/postorderEnumeration.java,
	gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/preorderEnumeration.java:
	New testcases.

2004-11-26  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/io/File/canWrite.java: Explicitly close
	files after we're done with them. Open files prevent directory